--- a/frontend/src/components/comments/CommentView.module.css
+++ b/frontend/src/components/comments/CommentView.module.css
@@ -20,6 +20,8 @@
 }
 
 .author {
+    color: black;
+    text-decoration: none;
     font-weight: bold;
     margin-right: 10px;
     margin-right: 10px;
