--- a/frontend/src/pages/UserProfilePage.module.css
+++ b/frontend/src/pages/UserProfilePage.module.css
@@ -1,10 +1,26 @@
+:root {
+    --gamesSection-spacing: 10px;
+    --gamesSectionCaption-spacing: 10px;
+    --gamesGrid-minCardSize: 300px;
+    --carouselCard-width: 500px;
+}
+
+.games {
+    width: 100%;
+}
+
+.games__list {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(var(--gamesGrid-minCardSize), 1fr));
+}
+
 .avatarImage {
     width: 50px;
     height: 50px;
 }
 
 .personInfoLabel {
-    padding: 5px;
 }
 
 .avatarContainer {
@@ -16,15 +32,15 @@
     padding: 10px;
     background-color: lightgray;
     border-radius: 10px;
-    margin: 10px;
+    margin-right: 10px;
 }
 
 .infoContainer {
     width: 100%;
 }
 
+
 .info {
-    margin-left: 30px;
     background-color: lightgray;
     padding: 10px;
     border-radius: 10px;
