--- a/frontend/src/pages/SignUpPage.module.css
+++ b/frontend/src/pages/SignUpPage.module.css
@@ -7,12 +7,12 @@
 }
 
 .signUpForm {
-    background-color: white;
+    /* background-color: rgb(216, 216, 216); */
     width: 400px;
     max-width: 100%;
     align-content: center;
     text-align: center;
-    border: 2px solid rgb(224, 224, 224);
+    /* border: 2px solid rgb(224, 224, 224); */
 }
 
 .signUpFormBody {
@@ -20,17 +20,20 @@
 }
 
 .field {
-    width: 100%;
+    width: 100%;  
+    /* border-bottom: none;   */
 }
 
 .fieldsContainer {
     display: grid;
-    grid-row-gap: 10px;
+    grid-row-gap: 24px;
+    width: 395px;
+   
 }
 
-.title {
+/* .title {
     border-bottom: 2px solid rgb(224, 224, 224);
-}
+} */
 
 .registerButton {
     width: 100%;
