--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 body {
-  background-color: #E5E5E5;
+  background-color: #ffffff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
