--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,12 +3,8 @@ body, html, #root {
     min-height: 100%;
 }
 
-h1 {
-    margin: 0;
-}
-
 body {
-  background-color: #E5E5E5;
+  background-color: #ffffff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
