--- a/frontend/src/components/NavMainButton.module.css
+++ b/frontend/src/components/NavMainButton.module.css
@@ -3,15 +3,21 @@
 
 .main {
     text-transform: none;
+    white-space: nowrap;
     color: rgb(255, 255, 255);
-    font-weight: normal;
+    font-weight: 600;
     border-radius: 8px;
     border: 2px solid rgba(4, 99, 234, 1);
-    width: 200px;
-    height:  34px;
-    align-items: center;
-    justify-content: center;
     background-color: #0463EA;
+    display: inline-block;
+    margin: 0;
+    font-size: 16px;
+    max-height: 34px;
+    margin: 0 20px 0 20px;
+    
+    
+    
+
     /* margin: 20px 50px 20px 20px; */
     
 }    
@@ -24,6 +30,18 @@
   .main:active{ 
     color: #0463EA;
   }
+
+.btntext{  
+  padding: 6px 16px;
+  
+
+}
+
+.btnlink{
+  color: white;
+  text-decoration: none;
+
+}
 
 
 
