--- a/frontend/src/pages/GamePublishPage/GamePublishPage.module.css
+++ b/frontend/src/pages/GamePublishPage/GamePublishPage.module.css
@@ -1,3 +1,10 @@
+
+
 .title {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: 'Open Sans', sans-serif;
+    color: black; 
+    
 }
