--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -9,7 +9,7 @@
     /* Logo */
     --logo-color: white;
     --logo-font-family: "Nunito";
-    --logo-font-size: 32px;    
+    --logo-font-size: 32px;
     --text-font-size: 16px;
     --block-box-shadow: 0 0 10px -5px black;
     --block-color: white;
@@ -46,6 +46,7 @@ h1 {
     margin: 0;
     font-weight: 600;
     font-size: 24px;
+    --main-font-family: "Open Sans", sans-serif;       
 }
 h2 {
     margin: 0;
