--- a/frontend/src/components/NavMainButton.module.css
+++ b/frontend/src/components/NavMainButton.module.css
@@ -13,7 +13,7 @@
     margin: 0;
     font-size: 16px;
     max-height: 34px;
-    padding: 0 20px 0 20px;
+    /* padding: 0 20px 0 20px; */
     align-items: center;
     justify-content: center;
     text-align: center;
