--- a/frontend/src/pages/PlayPage.module.css
+++ b/frontend/src/pages/PlayPage.module.css
@@ -14,8 +14,10 @@
 }
 
 .back {
+    margin-left: 1%;
+    margin-top: 1%;
     position: absolute;
-    text-decoration: none;
+    
 }
 
 .gameCanvas {
