--- a/frontend/src/components/NavButton.module.css
+++ b/frontend/src/components/NavButton.module.css
@@ -33,6 +33,9 @@
 
 .btntext{  
   padding: 6px 16px;  
+  font-family : var(--subtitletle-font-family);
+  font-weight:  var(--subtitletle-font-weight);
+  font-size:    var(--subtitletle-font-size);
 
 }
 
