--- a/frontend/src/components/NavMainButton.module.css
+++ b/frontend/src/components/NavMainButton.module.css
@@ -38,7 +38,9 @@
 
 .btntext{  
   padding: 6px 16px;
-  
+  font-family : var(--subtitletle-font-family);
+  font-weight:  var(--subtitletle-font-weight);
+  font-size:    var(--subtitletle-font-size);
 
 }
 
