--- a/frontend/src/pages/UnpublicatedGamesPage.module.css
+++ b/frontend/src/pages/UnpublicatedGamesPage.module.css
@@ -69,3 +69,9 @@
     width: var(--carouselCard-width);
     margin-right: 10px;
 }
+
+.personTitle {
+    padding-left: 16px;
+    padding-bottom: 14px;
+
+}
