--- a/frontend/src/components/HeaderReg.module.css
+++ b/frontend/src/components/HeaderReg.module.css
@@ -16,7 +16,7 @@
     z-index: 99;
     position: fixed;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: white;
     width: 100%;
@@ -27,20 +27,7 @@
     /* box-shadow: var(--header-box-shadow); */
 }
 
-@media (max-width: 1440px) {
-    .logoContainer{   
-        margin-right: 30px;
-    }
 
-    .blockHeader {
-        display: flex;
-        justify-content: normal;
-        
-    }
-
-
-
-}
 
 
 
@@ -60,11 +47,6 @@
     margin-right: 20px;
 }
 
-.logoContainer {
-    /* flex-grow: 2; */
-    padding-left: 70px;
-
-}
 
 .developerButton{
     border-radius: 8px;
@@ -75,7 +57,7 @@
 
 
 .logo {
-    margin-left: 15px;
+    
     margin-right: auto;
     font-family: var(--logo-font-family);
     font-size: var(--logo-font-size);
